--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,58 @@
 
+@inproceedings{bolin2005,
+  title = {Automation and Customization of Rendered Web Pages},
+  booktitle = {Proceedings of the 18th Annual {{ACM}} Symposium on {{User}} Interface Software and Technology  - {{UIST}} '05},
+  author = {Bolin, Michael and Webber, Matthew and Rha, Philip and Wilson, Tom and Miller, Robert C.},
+  date = {2005},
+  pages = {163},
+  publisher = {{ACM Press}},
+  location = {{Seattle, WA, USA}},
+  doi = {10.1145/1095034.1095062},
+  url = {http://portal.acm.org/citation.cfm?doid=1095034.1095062},
+  urldate = {2021-02-11},
+  abstract = {On the desktop, an application can expect to control its user interface down to the last pixel, but on the World Wide Web, a content provider has no control over how the client will view the page, once delivered to the browser. This creates an opportunity for end-users who want to automate and customize their web experiences, but the growing complexity of web pages and standards prevents most users from realizing this opportunity. We describe Chickenfoot, a programming system embedded in the Firefox web browser, which enables end-users to automate, customize, and integrate web applications without examining their source code. One way Chickenfoot addresses this goal is a novel technique for identifying page components by keyword pattern matching. We motivate this technique by studying how users name web page components, and present a heuristic keyword matching algorithm that identifies the desired component from the user’s name.},
+  eventtitle = {The 18th Annual {{ACM}} Symposium},
+  file = {/Users/geoffreylitt/Zotero/storage/5EF4RHD9/Bolin et al. - 2005 - Automation and customization of rendered web pages.pdf},
+  isbn = {978-1-59593-271-6},
+  langid = {english}
+}
+
+@inproceedings{bolin2005a,
+  title = {Automation and Customization of Rendered Web Pages},
+  booktitle = {Proceedings of the 18th Annual {{ACM}} Symposium on {{User}} Interface Software and Technology  - {{UIST}} '05},
+  author = {Bolin, Michael and Webber, Matthew and Rha, Philip and Wilson, Tom and Miller, Robert C.},
+  date = {2005},
+  pages = {163},
+  publisher = {{ACM Press}},
+  location = {{Seattle, WA, USA}},
+  doi = {10.1145/1095034.1095062},
+  url = {http://portal.acm.org/citation.cfm?doid=1095034.1095062},
+  urldate = {2021-02-11},
+  abstract = {On the desktop, an application can expect to control its user interface down to the last pixel, but on the World Wide Web, a content provider has no control over how the client will view the page, once delivered to the browser. This creates an opportunity for end-users who want to automate and customize their web experiences, but the growing complexity of web pages and standards prevents most users from realizing this opportunity. We describe Chickenfoot, a programming system embedded in the Firefox web browser, which enables end-users to automate, customize, and integrate web applications without examining their source code. One way Chickenfoot addresses this goal is a novel technique for identifying page components by keyword pattern matching. We motivate this technique by studying how users name web page components, and present a heuristic keyword matching algorithm that identifies the desired component from the user’s name.},
+  eventtitle = {The 18th Annual {{ACM}} Symposium},
+  file = {/Users/geoffreylitt/Zotero/storage/VLUP6DMI/Bolin et al. - 2005 - Automation and customization of rendered web pages.pdf},
+  isbn = {978-1-59593-271-6},
+  langid = {english}
+}
+
+@inproceedings{briot2016,
+  title = {High {{Responsiveness}} for {{Group Editing CRDTs}}},
+  booktitle = {Proceedings of the 19th {{International Conference}} on {{Supporting Group Work}}},
+  author = {Briot, Loïck and Urso, Pascal and Shapiro, Marc},
+  date = {2016-11-13},
+  pages = {51--60},
+  publisher = {{ACM}},
+  location = {{Sanibel Island Florida USA}},
+  doi = {10.1145/2957276.2957300},
+  url = {https://dl.acm.org/doi/10.1145/2957276.2957300},
+  urldate = {2021-02-11},
+  abstract = {Group editing is a crucial feature for many end-user applications. It requires high responsiveness, which can be provided only by optimistic replication algorithms, which come in two classes: classical Operational Transformation (OT), or more recent Conflict-Free Replicated Data Types (CRDTs).},
+  eventtitle = {{{GROUP}} '16: 2016 {{ACM Conference}} on {{Supporting Groupwork}}},
+  file = {/Users/geoffreylitt/Zotero/storage/PJUXMG6P/Briot et al. - 2016 - High Responsiveness for Group Editing CRDTs.pdf},
+  isbn = {978-1-4503-4276-6},
+  langid = {english}
+}
+
 @inproceedings{chasins2018,
   title = {Rousillon: {{Scraping Distributed Hierarchical Web Data}}},
   shorttitle = {Rousillon},
@@ -15,6 +69,25 @@
   eventtitle = {The 31st {{Annual ACM Symposium}}},
   file = {/Users/geoffreylitt/Zotero/storage/QUZNCYYS/Chasins et al. - 2018 - Rousillon Scraping Distributed Hierarchical Web D.pdf},
   isbn = {978-1-4503-5948-1},
+  langid = {english}
+}
+
+@inproceedings{gulwani2014,
+  title = {{{NLyze}}: Interactive Programming by Natural Language for Spreadsheet Data Analysis and Manipulation},
+  shorttitle = {{{NLyze}}},
+  booktitle = {Proceedings of the 2014 {{ACM SIGMOD International Conference}} on {{Management}} of {{Data}}},
+  author = {Gulwani, Sumit and Marron, Mark},
+  date = {2014-06-18},
+  pages = {803--814},
+  publisher = {{ACM}},
+  location = {{Snowbird Utah USA}},
+  doi = {10.1145/2588555.2612177},
+  url = {https://dl.acm.org/doi/10.1145/2588555.2612177},
+  urldate = {2021-02-11},
+  abstract = {Millions of computer end users need to perform tasks over tabular spreadsheet data, yet lack the programming knowledge to do such tasks automatically. This paper describes the design and implementation of a robust natural language based interface to spreadsheet programming. Our methodology involves designing a typed domain-specific language (DSL) that supports an expressive algebra of map, filter, reduce, join, and formatting capabilities at a level of abstraction appropriate for non-expert users. The key algorithmic component of our methodology is a translation algorithm for converting a natural language specification in the context of a given spreadsheet to a ranked set of likely programs in the DSL. The translation algorithm leverages the spreadsheet spatial and temporal context to assign interpretations to specifications with implicit references, and is thus robust to a variety of ways in which end users can express the same task. The translation algorithm builds over ideas from keyword programming and semantic parsing to achieve both high precision and high recall. We implemented the system as an Excel add-in called NLyze that supports a rich user interaction model including annotating the user’s natural language specification and explaining the synthesized DSL programs by paraphrasing them into structured English. We collected a total of 3570 English descriptions for 40 spreadsheet tasks and our system was able to generate the intended interpretation as the top candidate for 94\% (97\% for the top 3) of those instances.},
+  eventtitle = {{{SIGMOD}}/{{PODS}}'14: {{International Conference}} on {{Management}} of {{Data}}},
+  file = {/Users/geoffreylitt/Zotero/storage/KLSLS834/Gulwani and Marron - 2014 - NLyze interactive programming by natural language.pdf},
+  isbn = {978-1-4503-2376-5},
   langid = {english}
 }
 
