add a few citations

--- a/references.bib
+++ b/references.bib
@@ -17,24 +17,6 @@
   langid = {english}
 }
 
-@inproceedings{bolin2005a,
-  title = {Automation and Customization of Rendered Web Pages},
-  booktitle = {Proceedings of the 18th Annual {{ACM}} Symposium on {{User}} Interface Software and Technology  - {{UIST}} '05},
-  author = {Bolin, Michael and Webber, Matthew and Rha, Philip and Wilson, Tom and Miller, Robert C.},
-  date = {2005},
-  pages = {163},
-  publisher = {{ACM Press}},
-  location = {{Seattle, WA, USA}},
-  doi = {10.1145/1095034.1095062},
-  url = {http://portal.acm.org/citation.cfm?doid=1095034.1095062},
-  urldate = {2021-02-11},
-  abstract = {On the desktop, an application can expect to control its user interface down to the last pixel, but on the World Wide Web, a content provider has no control over how the client will view the page, once delivered to the browser. This creates an opportunity for end-users who want to automate and customize their web experiences, but the growing complexity of web pages and standards prevents most users from realizing this opportunity. We describe Chickenfoot, a programming system embedded in the Firefox web browser, which enables end-users to automate, customize, and integrate web applications without examining their source code. One way Chickenfoot addresses this goal is a novel technique for identifying page components by keyword pattern matching. We motivate this technique by studying how users name web page components, and present a heuristic keyword matching algorithm that identifies the desired component from the user’s name.},
-  eventtitle = {The 18th Annual {{ACM}} Symposium},
-  file = {/Users/geoffreylitt/Zotero/storage/VLUP6DMI/Bolin et al. - 2005 - Automation and customization of rendered web pages.pdf},
-  isbn = {978-1-59593-271-6},
-  langid = {english}
-}
-
 @inproceedings{briot2016,
   title = {High {{Responsiveness}} for {{Group Editing CRDTs}}},
   booktitle = {Proceedings of the 19th {{International Conference}} on {{Supporting Group Work}}},
@@ -88,6 +70,25 @@
   eventtitle = {{{SIGMOD}}/{{PODS}}'14: {{International Conference}} on {{Management}} of {{Data}}},
   file = {/Users/geoffreylitt/Zotero/storage/KLSLS834/Gulwani and Marron - 2014 - NLyze interactive programming by natural language.pdf},
   isbn = {978-1-4503-2376-5},
+  langid = {english}
+}
+
+@inproceedings{hogue2005,
+  title = {Thresher: Automating the Unwrapping of Semantic Content from the {{World Wide Web}}},
+  shorttitle = {Thresher},
+  booktitle = {Proceedings of the 14th International Conference on {{World Wide Web}}  - {{WWW}} '05},
+  author = {Hogue, Andrew and Karger, David},
+  date = {2005},
+  pages = {86},
+  publisher = {{ACM Press}},
+  location = {{Chiba, Japan}},
+  doi = {10.1145/1060745.1060762},
+  url = {http://portal.acm.org/citation.cfm?doid=1060745.1060762},
+  urldate = {2020-01-03},
+  abstract = {We describe Thresher, a system that lets non-technical users teach their browsers how to extract semantic web content from HTML documents on the World Wide Web. Users specify examples of semantic content by highlighting them in a web browser and describing their meaning. We then use the tree edit distance between the DOM subtrees of these examples to create a general pattern, or wrapper, for the content, and allow the user to bind RDF classes and predicates to the nodes of these wrappers. By overlaying matches to these patterns on standard documents inside the Haystack semantic web browser, we enable a rich semantic interaction with existing web pages, “unwrapping” semantic data buried in the pages’ HTML. By allowing end-users to create, modify, and utilize their own patterns, we hope to speed adoption and use of the Semantic Web and its applications.},
+  eventtitle = {The 14th International Conference},
+  file = {/Users/geoffreylitt/Zotero/storage/PGCCZ8XN/Hogue and Karger - 2005 - Thresher automating the unwrapping of semantic co.pdf},
+  isbn = {978-1-59593-046-0},
   langid = {english}
 }
 
