update references to demo figures

--- a/paper.tex
+++ b/paper.tex
@@ -280,19 +280,21 @@ page, and hovers over a data value she might like to scrape.
   \caption{\label{fig:creating} Creating an adapter: 1) column data will be scraped into, 2) system's controls, 3) demonstrated column value and row from which colums should be demonstrated from 4) column values determined by generalization algorithm 5) column values populated in table, 6) next column to scrape data into and 7) button to save adapter created by demonstration}
 \end{figure*}
 
+The workflow steps are shown in Figure~\ref{fig:creating}:
+
 \begin{itemize}
 \tightlist
 \item
   The selected row of data is annotated in the page with a border, to
-  indicate that she will be demonstrating values from within that row (1
-  in Figure~\ref{fig:creating}).
+  indicate that she will be demonstrating values from within that row
+  (Part 1).
 \item
   The selected column of data is highlighted in the page with a green
   background, to show how the system has generalized her demonstration
-  across all the rows in the data (3 \& 4 in Figure~\ref{fig:creating}).
+  across all the rows in the data (Part 3 and 4).
 \item
   A table view appears at the bottom of the screen, and displays how the
-  values will appear in the data table (5 in Figure~\ref{fig:creating}).
+  values will appear in the data table (Part 5).
 \end{itemize}
 
 Jen tries hovering over several other elements in the page, taking
@@ -305,38 +307,35 @@ Next, she performs a similar process to fill the next column with the
 weather descriptions. After filling both columns, she also tries
 hovering over previously scraped data, and the toolbar at the top of the
 page indicates which column corresponds to the previously scraped data.
-Finally, she ends the adapter creation process (7 in
-Figure~\ref{fig:creating}) and is able to immediately sort the forecast
-by the weather description column, because Wildcard provides a
-\textbf{unified environment} that combines both scraping and
-customizing.
+Finally, she ends the adapter creation process (Part 7) and is able to
+immediately sort the forecast by the weather description column, because
+Wildcard provides a \textbf{unified environment} that combines both
+scraping and customizing.
 
 \hypertarget{extending-an-adapter}{%
 \subsection{Extending An Adapter}\label{extending-an-adapter}}
 
-Jen uses Wildcard on timeanddate.com as can be seen from 1 in
-Figure~\ref{fig:extending}. In addition to sorting the list of holidays
-in a year by the day of the week, she also wants to sort them by
-category so she can view all the federal holidays together. Previously,
-she would have needed to find a programmer to help her edit the adapter
-code to incorporate this additional data, but using our system's support
-for \textbf{editing by demonstration}, Jen can extend the adapter
-herself.
+Jen uses Wildcard on timeanddate.com. In addition to sorting the list of
+holidays in a year by the day of the week, she also wants to sort them
+by category so she can view all the federal holidays together.
+Previously, she would have needed to find a programmer to help her edit
+the adapter code to incorporate this additional data, but using our
+system's support for \textbf{editing by demonstration}, Jen can extend
+the adapter herself.
 
 \begin{figure*}
   \includegraphics[width=\textwidth]{media/extending.png}
   \caption{\label{fig:extending} Extending an adapter: 1) table showing current columns and rows, 2) button for initiating adapter extension process, 3) new column value demonstrated and generalized, 4) new column values in the table and 5) button to save adapter extended by demonstration.}
 \end{figure*}
 
-While viewing the website, she clicks the ``Edit Adapter'' button (2 in
-Figure~\ref{fig:extending}) above the Wildcard table to initiate the
-adapter editing process. As she hovers over the currently scraped
-values, the columns they belong to are highlighted. Finally, she clicks
-on ``Federal Holiday'' (3 in Figure~\ref{fig:extending}) to add the new
-column of data to the table (4 in Figure~\ref{fig:extending}) and saves
-the changes (5 in Figure~\ref{fig:extending}). Jen then proceeds to sort
-the list by the type of holiday without the intervention of a
-programmer.
+The workflow is shown in Figure~\ref{fig:extending}. While viewing the
+website, she clicks the ``Edit Adapter'' button (Part 2) above the
+Wildcard table to initiate the adapter editing process. As she hovers
+over the currently scraped values, the columns they belong to are
+highlighted. Finally, she clicks on ``Federal Holiday'' (Part 3) to add
+the new column of data to the table (Part 4) and saves the changes (Part
+5). Jen then proceeds to sort the list by the type of holiday without
+the intervention of a programmer.
 
 \hypertarget{repairing-an-adapter}{%
 \subsection{Repairing An Adapter}\label{repairing-an-adapter}}
@@ -345,24 +344,23 @@ Jen next visits Google Scholar to look up references for her thesis
 project. Unfortunately, the customization she had applied to sort
 publications by their title (which is not natively supported by Google
 Scholar) is no longer working. In fact, the column in the Wildcard table
-that contained all the publication titles is empty (1 in
-Figure~\ref{fig:repairing}), because the website's internals changed and
-broke the adapter's scraping logic. Jen can repair this on her own,
-again taking advantage of \textbf{editing by demonstration}.
+that contained all the publication titles is empty, because the
+website's internals changed and broke the adapter's scraping logic. Jen
+can repair this on her own, again taking advantage of \textbf{editing by
+demonstration}.
 
-Jen initiates the editing process (2 in Figure~\ref{fig:repairing}), and
-initially hovers over the desired value to demonstrate the column she
-wants to scrape. However, the \textbf{live programming} interface
-indicates to her that the values would be populated into column D;
-instead, she wants the values to be inserted into column A where they
-previously appeared. So, Jen clicks on the symbol for column A (3 in
-Figure~\ref{fig:repairing}) to indicate that she wants to scrape the
-values into that column and demonstrates the first publication title (4
-in Figure~\ref{fig:repairing}). The missing values are now back in the
-table (5 in Figure~\ref{fig:repairing}). She then proceeds to save her
-changes (6 in fig:repairing) and re-apply her customization to the
-website by sorting the publications by their title without the
-intervention of a programmer.
+The workflow is shown in Figure~\ref{fig:repairing}. Jen initiates the
+editing process (Part 2), and initially hovers over the desired value to
+demonstrate the column she wants to scrape. However, the \textbf{live
+programming} interface indicates to her that the values would be
+populated into column D; instead, she wants the values to be inserted
+into column A where they previously appeared. So, Jen clicks on the
+symbol for column A (Part 3) to indicate that she wants to scrape the
+values into that column and demonstrates the first publication title
+(Part 4). The missing values are now back in the table (Part 5). She
+then proceeds to save her changes (Part 6) and re-apply her
+customization to the website by sorting the publications by their title
+without the intervention of a programmer.
 
 \begin{figure*}
   \includegraphics[width=\textwidth]{media/repairing.png}
