Added references to commercial scraping tools

--- a/references.bib
+++ b/references.bib
@@ -54,6 +54,16 @@
   langid = {english}
 }
 
+@online{dexi.io,
+  title = {The Most Powerful Web Scraping Software Available},
+  author = {{dexi.io}},
+  url = {https://webscraping.dexi.io},
+  urldate = {2021-02-14},
+  abstract = {Advanced web scraping/data extraction software. Scrape data from any online source using our easy-to-use point'n click interface. Dexi.io is a cloud-based web scraping tool which enables you to extract and transform data from any web/cloud source through automation and intelligent mining technology.},
+  file = {/Users/kapayakatongo/Zotero/storage/S239KIHZ/webscraping.dexi.io.html},
+  langid = {english}
+}
+
 @inproceedings{drosos2020,
   title = {Wrex: {{A Unified Programming}}-by-{{Example Interaction}} for {{Synthesizing Readable Code}} for {{Data Scientists}}},
   shorttitle = {Wrex},
@@ -345,6 +355,30 @@
   abstract = {A vision for empowered computing that reaches back forty years. Our research lab examines why it has been so hard to achieve.},
   file = {/Users/kapayakatongo/Zotero/storage/R7VKML4E/end-user-programming.html},
   langid = {american}
+}
+
+@online{zotero-77,
+  title = {Data {{Scraping}} | {{Web Scraping}} | {{Screen Scraping}} | {{Extract}}},
+  url = {https://www.import.io/product/extract/},
+  urldate = {2021-02-14},
+  abstract = {Extract | Import.io},
+  file = {/Users/kapayakatongo/Zotero/storage/ELBSTH27/extract.html},
+  langid = {american},
+  organization = {{Import.io}}
+}
+
+@online{zotero-83,
+  title = {Web {{Scraping Tool}} \& {{Free Web Crawlers}} | {{Octoparse}}},
+  url = {https://www.octoparse.com/#},
+  urldate = {2021-02-14},
+  file = {/Users/kapayakatongo/Zotero/storage/8GFGADNJ/www.octoparse.com.html}
+}
+
+@online{zotero-86,
+  title = {{{ParseHub}} | {{Free}} Web Scraping - {{The}} Most Powerful Web Scraper},
+  url = {https://www.parsehub.com/},
+  urldate = {2021-02-14},
+  file = {/Users/kapayakatongo/Zotero/storage/LDS3QHAZ/www.parsehub.com.html}
 }
 
 
