fix reference dates

--- a/paper.tex
+++ b/paper.tex
@@ -593,8 +593,8 @@ need to switch from the environment in which they are using the data to
 the environment in which they created their scraping code in order to
 edit and re-run it. This can be seen in many end-user web scraping
 systems like Rousillon \citep{chasins2018} and commercial tools like
-import.io \citep{zotero-77}, dexi.io \citep{dexi.io}, Octoparse
-\citep{zotero-83} and ParseHub \citep{zotero-86}. In web customization,
+import.io \citep{import.io}, dexi.io \citep{dexi.io}, Octoparse
+\citep{octoparse} and ParseHub \citep{parsehub}. In web customization,
 the creators of Vegemite \citep{lin2009}, a system for end-user
 programming of mashups, reported that participants of its user study
 thought ``it was confusing to use one technique to create the initial
